# zero2prod

./: Cargo.toml  Dockerfile  README.md  sqlx-data.json
.github/workflows/: ci.yml
configuration/: production.yml
migrations/: 20211028162331_create_subscriptions_table.sql  20211105160033_create_subscription_tokens_table.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
