[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "=4.0.0-beta.9"
actix-http = "=3.0.0-beta.10"
anyhow = "1"
chrono = "0.4.15"
config = "0.11.0"
env_logger = "0.9.0"
log = "0.4"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"]}
serde-aux = "3.0.1"
rand = { version = "0.8", features=["std_rng"] }
thiserror = "1"
tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = "0.4.0-beta.12"
tracing-bunyan-formatter = "0.1.6"
tracing-futures = "0.2.4"
tracing-log = "0.1.2"
tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
uuid = { version = "0.8.1", features = ["v4"] }
unicode-segmentation = "1.8.0"
validator = "0.14.0"

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dev-dependencies]
actix-rt = "2"
claim = "0.5.0"
fake = "~2.3"
linkify = "0.5.0"
once_cell = "1.8.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.5.2"
